--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -593,7 +593,8 @@ rel="stylesheet" type="text/css">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/">MathSight Demo</a>
+		  <!-- <a class="brand" href="/">MathSight Demo</a> -->
+		           <a class="brand" href="#"><img src="logo/mathsight-cobalt logo.png" /></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
                 <li><a href="/">Home</a></li>
