--- a/SQ_feature.html
+++ b/SQ_feature.html
@@ -461,12 +461,14 @@ redrawGraph = function(file) {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="/">MathSight Demo</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-                <li><a href="/">Home</a></li>
-                <!-- <li><a href="/plans.html">Plans</a></li> -->
+		</button>
+		<!-- <a class="brand" href="/">MathSight Demo</a> -->
+		<a class="brand" href="#"><img src="logo/mathsight-cobalt logo.png" /></a>
+          
+		<div class="nav-collapse collapse">
+			<ul class="nav">
+				<li><a href="/">Home</a></li>
+				<!-- <li><a href="/plans.html">Plans</a></li> -->
 				<li class="active"><a href="/statseo_feature.html">StatSEO</a></li>
 				<li><a href="/api.html">API</a></li>
 				<!-- <li><a href="/jobs.html">Jobs</a></li> -->
