--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -467,7 +467,8 @@ redrawGraph = function(file) {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/">MathSight Demo</a>
+		  <!-- <a class="brand" href="/">MathSight Demo</a> -->
+		           <a class="brand" href="#"><img src="logo/mathsight-cobalt logo.png" /></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
                 <li><a href="/">Home</a></li>
