--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -344,7 +344,8 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="brand" href="/">MathSight Demo</a>
+			    <!-- <a class="brand" href="/">MathSight Demo</a> -->
+			             <a class="brand" href="#"><img src="logo/mathsight-cobalt logo.png" /></a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="/">Home</a></li>
