--- a/feature_def.html
+++ b/feature_def.html
@@ -274,28 +274,29 @@
 
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar"
-                  data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="/">MathSight Demo</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-                <li><a href="/">Home</a></li>
-                <!-- <li><a href="/plans.html">Plans</a></li> -->
-				<li><a href="/statseo_feature.html">StatSEO</a></li>
-				<li><a href="/api.html">API</a></li>
-				<li class="active"><a href="/feature_def.html">Features</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<button type="button" class="btn btn-navbar"
+				data-toggle="collapse" data-target=".nav-collapse">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<!-- <a class="brand" href="/">MathSight Demo</a> -->
+			<a class="brand" href="#"><img src="logo/mathsight-cobalt logo.png" /></a>
+			<div class="nav-collapse collapse">
+				<ul class="nav">
+					<li><a href="/">Home</a></li>
+					<!-- <li><a href="/plans.html">Plans</a></li> -->
+					<li><a href="/statseo_feature.html">StatSEO</a></li>
+					<li><a href="/api.html">API</a></li>
+					<li class="active"><a href="/feature_def.html">Features</a></li>
+				</ul>
+			</div><!--/.nav-collapse -->
+		</div>
+	</div>
+</div>
 
     <!-- We use row-fluid inside containers to achieve a resizable layout. -->
     <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
