feedback jellyfish demo - links and pages

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -635,7 +635,7 @@ rel="stylesheet" type="text/css">
 	  </div>
 	  
 	  <div class="well">
-		  <h2><script> if (onOrOffsite = "offsite")
+		  <h2><script> if (onOrOffsite == "offsite")
 			  {document.write(healthOrHarm + " backlinks [" + onOrOffsite + "]");}
 			  else {
 			  	document.write(healthOrHarm + " pages [" + onOrOffsite + "]");
