--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -303,6 +303,13 @@
 
 	};
 	
+	// -----------------------------
+	
+	function makeSwitch() {
+		
+	};
+
+
 	
 
 	// -----------------------------
@@ -702,10 +709,10 @@ rel="stylesheet" type="text/css">
 						  <th>
 							  <script>
 							  if (healthOrHarm == 'harmful'){
-								  document.write('# losing URLs');
+								  document.write('# harmful URLs');
 							  }
 							  else {
-								  document.write('# winning URLs');
+								  document.write('# healthy URLs');
 							  }
 							  </script>
 						  </th>
@@ -797,7 +804,7 @@ rel="stylesheet" type="text/css">
 					</tr>
 					<tr>
 						<th width="10%">Value</th>
-						<th width="10%">Cluster mean</th>
+						<th width="10%">Target mean</th>
 						<th width="10%">Delta</th>
 					</tr>
 				  </thead>
@@ -808,7 +815,7 @@ rel="stylesheet" type="text/css">
 					  <tr>
 						  <th rowspan="2" >Page URL</th>
 						  <th>Value</th>
-						  <th>Cluster mean</th>
+						  <th>Target mean</th>
 						  <th>Delta</th>
 					  </tr>
 					  <tr>
