added comms to API

--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -200,7 +200,7 @@ else {
 	topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
 }
 
-var highlightFilename = "http://api.mathsight.org/ms_api/v1/"+onOrOffsite+"?target=http%3A%2F%2Fwww."+websiteName+".com&metric=highlight&order=asc&count=10&token=ee04d5eef98cce541994b28cb05adfe29d4345bf"
+var highlightFilename = "http://api.mathsight.org/ms_api/v1/"+onOrOffsite+"?target=http%3A%2F%2Fwww."+websiteName+".com&metric=highlight&order=asc&count=10&token=ee04d5eef98cce541994b28cb05adfe29d4345bf&callback=?"
 
 
 
