added comms to API

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -104,14 +104,14 @@
 	
 	if (onOrOffsite == "onsite") {
 		JSONfilename = "XDrill";
-		// highlightFilename = "json/summary/"+websiteName+"_Xhat.json";
-		highlightFilename = "http://api.mathsight.org/ms_api/v1/onsite?target=http%3A%2F%2Fwww.alchemyviral.com&metric=highlight&order=asc&count=10&token=ee04d5eef98cce541994b28cb05adfe29d4345bf&_=1390759390819"
+		highlightFilename = "json/summary/"+websiteName+"_Xhat.json";
+		// highlightFilename = "http://api.mathsight.org/ms_api/v1/onsite?target=http%3A%2F%2Fwww.alchemyviral.com&metric=highlight&order=asc&count=10&token=ee04d5eef98cce541994b28cb05adfe29d4345bf&_=1390759390819";
 		drilldownFilename = "json/drilldown/"+websiteName+"_XDrill.json";
 	}
 	else if (onOrOffsite == "offsite"){
 		JSONfilename = "XDrillOff";
-		// highlightFilename = "json/summary/"+websiteName+"_XhatOff.json";
-		highlightFilename = "http://api.mathsight.org/ms_api/v1/offsite?target=http%3A%2F%2Fwww.alchemyviral.com&metric=highlight&order=asc&count=10&token=ee04d5eef98cce541994b28cb05adfe29d4345bf&_=1390759390819"
+		highlightFilename = "json/summary/"+websiteName+"_XhatOff.json";
+		// highlightFilename = "http://api.mathsight.org/ms_api/v1/offsite?target=http%3A%2F%2Fwww.alchemyviral.com&metric=highlight&order=asc&count=10&token=ee04d5eef98cce541994b28cb05adfe29d4345bf&_=1390759390819";
 		drilldownFilename = "json/drilldown/"+websiteName+"_XDrillOff.json";
 	};
 	
