--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -308,6 +308,14 @@
 	// -----------------------------
 	
 	function makeSwitch() {
+
+		if (onOrOffsite == 'onsite') {
+			urlToOpen = "SQ_drilldown.html?="+websiteName+"&="+featureName+"&=offsite&="+healthOrHarm;
+		}
+		else if (onOrOffsite == 'offsite') {
+			urlToOpen = "SQ_drilldown.html?="+websiteName+"&="+featureName+"&=onsite&="+healthOrHarm;
+		};
+		
 		
 	};
 
@@ -652,9 +660,9 @@ rel="stylesheet" type="text/css">
 			  
 			  <button onclick="makeSwitch()" type="submit" class="btn btn-primary" id="switchOnOff">
 				  <script> if (onOrOffsite == "offsite")
-				  			  {document.write('See onsite');}
+				  			  {document.write('Switch to onsite');}
 				  			  else {
-				  			  	document.write('See offsite');
+				  			  	document.write('Switch to offsite');
 				  			  };
 				  </script>		  
 			  </button>
