added onsite/offsite switch

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -315,7 +315,7 @@
 		else if (onOrOffsite == 'offsite') {
 			urlToOpen = "SQ_drilldown.html?="+websiteName+"&="+featureName+"&=onsite&="+healthOrHarm;
 		};
-		
+		window.open(urlToOpen);
 		
 	};
 
