added both losing and winning mean to drilldown table

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -726,12 +726,8 @@ rel="stylesheet" type="text/css">
 							  }
 							  </script>
 						  </th>
-						  <th>
-							  Feature losing mean
-						  </th>
-						  <th>
-							  Feature winning mean [TARGET]
-						  </th>
+						  <th>Feature losing mean</th>
+						  <th>Feature winning mean [TARGET]</th>
 						  <th>
 							  <script>
 							  if (healthOrHarm == 'harmful'){
