added both losing and winning mean to drilldown table

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -731,10 +731,10 @@ rel="stylesheet" type="text/css">
 						  <th>
 							  <script>
 							  if (healthOrHarm == 'harmful'){
-								  document.write('Avg domain feature value (harmful URLs)');
+								  document.write('This site feature mean (harmful group)');
 							  }
 							  else {
-								  document.write('Avg domain feature value (healthy URLs)');
+								  document.write('This site feature mean (healthy group)');
 							  }
 							  </script>  
 						  </th>
