--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -310,7 +310,9 @@ function initDataTables(){
 	{"bVisible": false}, // harmful group avg SQ (8)
 	{"bVisible": false}, // number of healthy URLs (9)
 	{"bVisible": false}, // healthy group feature mean (10)
-	{"bVisible": false} // healthy group StatSEO figure (11)
+	{"bVisible": false}, // healthy group StatSEO figure (11)
+	{"bVisible": false}, // harmful group feature SD 12
+	{"bVisible": false} // healthy group feature SD 13
 	]
 } );
 
@@ -350,7 +352,9 @@ null, //winning mean 3
 {"bVisible": false}, // harmful group average SQ 8
 null, // number of healthy URLs 9
 {"bVisible": false}, // healthy group feature mean 10
-{"bVisible": false} // healthy group average SQ 11
+{"bVisible": false}, // healthy group average SQ 11
+{"bVisible": false}, // harmful group feature SD 12
+{"bVisible": false} // healthy group feature SD 13
 ]
 } );
 
