--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -269,12 +269,12 @@
 			sd2 = parseFloat(loseStd) || 1.5;
 			
 			if (healthOrHarm == 'healthy') {
-				mu3 = parseFloat(harmMean) || 3;
-				sd3 = parseFloat(harmStd) || 1.5;
-			} else if (healthOrHarm == 'healthy') {
-				mu3 = parseFloat(healthMean) || 3;
-				sd3 = parseFloat(healthStd) || 1.5;
-			}
+				mu3 = parseFloat(harmMean) || 4;
+				sd3 = parseFloat(harmStd) || 1;
+			} else if (healthOrHarm == 'harmful') {
+				mu3 = parseFloat(healthMean) || 4;
+				sd3 = parseFloat(healthStd) || 1;
+			};
 
 
 			ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2,mu3-3*sd3));
