added new JSON data

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -269,11 +269,11 @@
 			sd2 = parseFloat(loseStd) || 1.5;
 			
 			if (healthOrHarm == 'healthy') {
-				mu3 = parseFloat(harmMean) || 4;
-				sd3 = parseFloat(harmStd) || 1;
+				mu3 = parseFloat(harmMean);
+				sd3 = parseFloat(harmStd);
 			} else if (healthOrHarm == 'harmful') {
-				mu3 = parseFloat(healthMean) || 4;
-				sd3 = parseFloat(healthStd) || 1;
+				mu3 = parseFloat(healthMean);
+				sd3 = parseFloat(healthStd);
 			};
 
 
@@ -354,24 +354,39 @@
 			iy3.push({x: i, y: (1/(sd3*Math.sqrt(2*Math.PI)))* Math.exp(-Math.pow(i-mu3,2)/(2*Math.pow(sd3,2)))});
 		}
 
-
-		return [
-		{
-			values: iy,
-			key: 'Winning Distribution',
-			color: '#00cc00'
-		},
-		{
-			values: iy2,
-			key: 'Losing Distribution',
-			color: '#ff0000'
-		},
-		{
-			values: iy3,
-			key: 'This URL sub-Group',
-			color: '#0000ff'
-		}
-		];
+		if (mu3 == 0 && sd3 == 0) {
+			return [
+			{
+				values: iy,
+				key: 'Winning Distribution',
+				color: '#00cc00'
+			},
+			{
+				values: iy2,
+				key: 'Losing Distribution',
+				color: '#ff0000'
+			}
+			];} 
+		
+			else {
+				return [
+				{
+					values: iy,
+					key: 'Winning Distribution',
+					color: '#00cc00'
+				},
+				{
+					values: iy2,
+					key: 'Losing Distribution',
+					color: '#ff0000'
+				},
+				{
+					values: iy3,
+					key: 'This URL sub-Group',
+					color: '#0000ff'
+				}
+				];
+			}
 
 	};
 
