added new JSON data

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -277,8 +277,8 @@
 			};
 
 
-			ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2,mu3-3*sd3));
-			ixMax = Math.round(Math.max(mu+3*sd,mu2+3*sd2,mu3+3*sd3));
+			ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2));
+			ixMax = Math.round(Math.max(mu+3*sd,mu2+3*sd2));
 			ixRange = ixMax-ixMin;
 			ixInc = ixRange/100;
 
