--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -174,6 +174,10 @@ text {
   height: 500px;
 }
 
+#lineChart svg {
+  height: 400px;
+}
+
 </style>
 
 	
@@ -384,7 +388,7 @@ $(document).ready(function(){
 	nv.addGraph(function() {  
 		var lineChart = nv.models.lineChart();
 		lineChart.xAxis
-		.axisLabel('StatSEO metric')
+		.axisLabel('StatSEO metric (SQ)')
 		.tickFormat(d3.format(',r'));
 
 		lineChart.yAxis
