--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -625,12 +625,30 @@ function normalDist() {
 			<p></p>
 		</div>
 
-		<div id="lineChart" class='with-3d-shadow with-transitions'>
-			<svg></svg>
+
+		<div class="panel panel-default" style="margin-left: 15px; margin-right: 15px">
+		   <div class="panel-heading">
+		     <h3 class="panel-title">Domain traffic health</h3>
+		   </div>
+		   <div class="panel-body">
+		     <div class="row">
+		       <div class="col-md-2">
+		          Plotted versus all other domains and similar domains
+				 <!-- <img src="http://placehold.it/140x140" class="img-rounded" style="width: 100px; height: 100px"> -->
+		       </div>
+			   <div class="col-md-10">
+				   <div id="lineChart" class='with-3d-shadow with-transitions'>
+					   <svg></svg>
+				   </div>
+			   </div>
+		     </div>
+		   </div>
 		</div>
+
 
 		<br><br>
 		<hr>
+		<br><br>
 		<div id="chart1" class='with-3d-shadow with-transitions'>
 			<svg></svg>
 		</div>
