--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -620,10 +620,10 @@ function normalDist() {
 
 		</div>
 	  
-		<div class="well">
+		<!-- <div class="well">
 			<h2>Domain health status summary</h2>
 			<p></p>
-		</div>
+		</div> -->
 
 
 		<div class="panel panel-default" style="margin-left: 15px; margin-right: 15px">
@@ -649,10 +649,26 @@ function normalDist() {
 		<br><br>
 		<hr>
 		<br><br>
-		<div id="chart1" class='with-3d-shadow with-transitions'>
-			<svg></svg>
+		
+		
+		<div class="panel panel-default" style="margin-left: 15px; margin-right: 15px">
+		   <div class="panel-heading">
+		     <h3 class="panel-title">Domain page health summary</h3>
+		   </div>
+		   <div class="panel-body">
+		     <div class="row">
+		       <div class="col-md-2">
+		          Plotted for this domain and associated offsite links
+				 <!-- <img src="http://placehold.it/140x140" class="img-rounded" style="width: 100px; height: 100px"> -->
+		       </div>
+			   <div class="col-md-10">
+				   <div id="chart1" class='with-3d-shadow with-transitions'>
+					   <svg></svg>
+				   </div>
+			   </div>
+		     </div>
+		   </div>
 		</div>
-
 
 		<hr>
 		<div class = "well">
