--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -632,7 +632,7 @@ function normalDist() {
 		   </div>
 		   <div class="panel-body">
 		     <div class="row">
-		       <div class="col-md-2">
+		       <div class="col-md-2" style="margin-left: 15px">
 		          Plotted versus all other domains and similar domains
 				 <!-- <img src="http://placehold.it/140x140" class="img-rounded" style="width: 100px; height: 100px"> -->
 		       </div>
@@ -657,7 +657,7 @@ function normalDist() {
 		   </div>
 		   <div class="panel-body">
 		     <div class="row">
-		       <div class="col-md-2">
+		       <div class="col-md-2" style="margin-left: 15px">
 		          Plotted for this domain and associated offsite links
 				 <!-- <img src="http://placehold.it/140x140" class="img-rounded" style="width: 100px; height: 100px"> -->
 		       </div>
