added domain level summary

--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -626,13 +626,13 @@ function normalDist() {
 		</div> -->
 
 
-		<div class="panel panel-default">
+		<div class="panel panel-default" style="margin-left: 15px; margin-right: 15px">
 		   <div class="panel-heading">
-		     <h3 class="panel-title">Domain traffic health</h3>
+		     <h3 class="panel-title" style="margin-left: 15px">Domain traffic health</h3>
 		   </div>
 		   <div class="panel-body">
 		     <div class="row">
-		       <div class="col-md-2">
+		       <div class="col-md-2" style="margin-left: 15px">
 		          Plotted versus all other domains and similar domains
 				 <!-- <img src="http://placehold.it/140x140" class="img-rounded" style="width: 100px; height: 100px"> -->
 		       </div>
@@ -651,13 +651,13 @@ function normalDist() {
 		<br><br>
 		
 		
-		<div class="panel panel-default">
+		<div class="panel panel-default" style="margin-left: 15px; margin-right: 15px">
 		   <div class="panel-heading">
-		     <h3 class="panel-title">Domain page health summary</h3>
+		     <h3 class="panel-title" style="margin-left: 15px">Domain page health summary</h3>
 		   </div>
 		   <div class="panel-body">
 		     <div class="row">
-		       <div class="col-md-2">
+		       <div class="col-md-2" style="margin-left: 15px">
 		          Plotted for this domain and associated offsite links
 				 <!-- <img src="http://placehold.it/140x140" class="img-rounded" style="width: 100px; height: 100px"> -->
 		       </div>
