added domain level summary

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -200,7 +200,7 @@
 
 			});
 		}
-		else {
+		else if (onOrOffsite == 'offsite') {
 			$.each(results.offsite, function(index) {
 
 				blob = results.offsite[index];
