corrected healthy / harmful plot

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -268,10 +268,10 @@
 
 			sd2 = parseFloat(loseStd) || 1.5;
 			
-			if (healthOrHarm == 'healthy') {
+			if (healthOrHarm == 'harmful') {
 				mu3 = parseFloat(harmMean);
 				sd3 = parseFloat(harmStd);
-			} else if (healthOrHarm == 'harmful') {
+			} else if (healthOrHarm == 'healthy') {
 				mu3 = parseFloat(healthMean);
 				sd3 = parseFloat(healthStd);
 			};
