added ability to directly switch between healthy and harmful

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -706,7 +706,7 @@ rel="stylesheet" type="text/css">
 			  
 			  <br>
 			  <div class="btn-group">
-				  <button onclick="makeSwitchSite()" type="submit" class="btn btn-primary" id="switchOnOff">
+				  <button onclick="makeSwitchSite()" type="submit" class="btn btn-info" id="switchOnOff">
 					  <script> if (onOrOffsite == "offsite"){
 						  document.write('Switch to onsite');
 					  }
