--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -332,7 +332,7 @@
 		};
 		
 		urlToOpen = "SQ_drilldown.html?="+websiteName+"&="+featureName+"&="+switchOnOff+"&="+healthOrHarm;
-		window.open(urlToOpen);
+		window.open(urlToOpen,"_self");
 		
 	};
 
@@ -346,7 +346,7 @@
 		};
 		
 		urlToOpen = "SQ_drilldown.html?="+websiteName+"&="+featureName+"&="+onOrOffsite+"&="+switchHealth;
-		window.open(urlToOpen);
+		window.open(urlToOpen,"_self");
 		
 	};
 	
